2-pojo/3-compile_run.txt

javac -cp h2o-genmodel.jar -J-Xmx4g test_airline_GBM_100k.java main.java 

test_airline_GBM_100k.java:3136: error: code too large
  public static final byte[] GRPSPLIT0 = new byte[] {1, -128, 32, 18, 2, -42, 0, 26, 18, 8, -96, 10, 2, 32, 0, 32, 65, 48, 81, 8, -64, -118, 38, 16, -76, -95, 97, 4, 40, 3, 4, 10, 4, 74, 33};
                             ^
1 error
                        
                             
                             
## TODO after it compiles: 
## time java -cp .:h2o-genmodel.jar main
   